fixed query suggestions z-index

--- a/app.css
+++ b/app.css
@@ -144,7 +144,7 @@ body,html {
 
 .query-area .query-suggestions {
   position: absolute;
-  background-color: #fff;
+  z-index: 9999;
   text-align: left;
   padding: 5px 10px;
   font-size: 20px;
